--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,17 @@
-list=[]
+list=[{
+"base": &"Resource",
+"class": &"Reel",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"C#",
+"path": "res://src/core/Reel.cs"
+}, {
+"base": &"Resource",
+"class": &"Symbol",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"C#",
+"path": "res://src/core/Symbol.cs"
+}]
