--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,14 +2,14 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_filesystem_h_split_offset=480
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/playing.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/gameManager.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://src/core/", "res://scenes/", "res://assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -28,12 +28,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/gameManager.tscn", "res://scenes/mainMenu.tscn", "res://scenes/playing.tscn", "res://scenes/shop.tscn")
-current_scene="res://scenes/shop.tscn"
+open_scenes=PackedStringArray("res://scenes/gameManager.tscn", "res://scenes/mainMenu.tscn", "res://scenes/playing.tscn", "res://scenes/shop.tscn", "res://scenes/game_manager.tscn")
+current_scene="res://scenes/gameManager.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
@@ -52,7 +52,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(1268, 836, 1399, 832)
+floating_window_rect=Rect2i(1268, 846, 1399, 812)
 floating_window_screen=0
 
 [ShaderEditor]
