--- a/.godot/editor/quick_open_dialog_cache.cfg
+++ b/.godot/editor/quick_open_dialog_cache.cfg
@@ -1,3 +1,5 @@
 [selected_history]
 
-PackedScene=PackedStringArray("uid://qof4nkv64p8n")
+Script=PackedStringArray("uid://cljcr5ci5arug", "uid://uf8vwauolkrd", "uid://ba20kitv13amf")
+Resource=PackedStringArray("uid://uf8vwauolkrd", "uid://cv60kgw6mweha")
+PackedScene=PackedStringArray("uid://etprqw7bt31")
