--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,18 +1,4 @@
-[res://README.md]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 6,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "Markdown"
-}
-
-[res://src/core/slotMachine.gd]
+[res://src/core/Test.cs]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -23,10 +9,24 @@ state={
 "row": 0,
 "scroll_position": 0.0,
 "selection": false,
-"syntax_highlighter": "GDScript"
+"syntax_highlighter": "Standard"
 }
 
-[res://src/core/gameManager.gd]
+[res://src/spin/MultSpinModifier.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 12,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 8,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Standard"
+}
+
+[res://src/core/Symbol.cs]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -34,10 +34,38 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
-"scroll_position": 1.0,
+"row": 13,
+"scroll_position": 0.0,
 "selection": false,
-"syntax_highlighter": "GDScript"
+"syntax_highlighter": "Standard"
+}
+
+[res://src/run/RunManager.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 2,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Standard"
+}
+
+[res://src/core/Reel.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Standard"
 }
 
 [res://src/core/mainMenu.gd]
@@ -48,8 +76,30 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
+"row": 0,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 21,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/core/gameManager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 24,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 41,
+"scroll_position": 21.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 24,
+"selection_to_line": 41,
 "syntax_highlighter": "GDScript"
 }
