--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,15 +2,15 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_h_split_offset=480
+dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://scenes/gameManager.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://src/core/", "res://scenes/", "res://assets/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://temp/", "res://src/", "res://src/run/", "res://src/core/", "res://scenes/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -20,7 +20,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-483
+dock_hsplit_3=-349
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,10 +28,10 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/gameManager.tscn", "res://scenes/mainMenu.tscn", "res://scenes/playing.tscn", "res://scenes/shop.tscn", "res://scenes/game_manager.tscn")
+open_scenes=PackedStringArray("res://scenes/mainMenu.tscn", "res://scenes/gameManager.tscn")
 current_scene="res://scenes/gameManager.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=1
 
@@ -39,26 +39,26 @@ selected_bottom_panel_item=1
 
 screen=0
 mode="maximized"
-position=Vector2i(0, 86)
+position=Vector2i(0, 25)
 
 [ScriptEditor]
 
-open_scripts=["res://src/core/gameManager.gd", "res://src/core/mainMenu.gd"]
-selected_script="res://src/core/gameManager.gd"
+open_scripts=["res://src/core/gameManager.gd", "res://src/core/mainMenu.gd", "res://src/core/Reel.cs", "res://src/run/RunManager.cs", "res://src/core/Symbol.cs", "res://src/core/Test.cs"]
+selected_script="res://src/run/RunManager.cs"
 open_help=[]
-script_split_offset=400
+script_split_offset=200
 list_split_offset=0
 zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(1268, 846, 1399, 812)
+floating_window_rect=Rect2i(314, 117, 1292, 767)
 floating_window_screen=0
 
 [ShaderEditor]
 
 open_shaders=[]
-split_offset=400
+split_offset=200
 selected_shader=""
 text_shader_zoom_factor=1.0
 
