Fix godot files

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/gameManager.tscn", "res://scenes/mainMenu.tscn", "res://scenes/playing.tscn", "res://scenes/shop.tscn", "res://scenes/game_manager.tscn")
-current_scene="res://scenes/game_manager.tscn"
+open_scenes=PackedStringArray("res://scenes/gameManager.tscn", "res://scenes/mainMenu.tscn", "res://scenes/playing.tscn", "res://scenes/shop.tscn")
+current_scene="res://scenes/mainMenu.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
@@ -44,7 +44,7 @@ position=Vector2i(0, 86)
 [ScriptEditor]
 
 open_scripts=["res://src/core/gameManager.gd", "res://src/core/mainMenu.gd"]
-selected_script="res://src/core/gameManager.gd"
+selected_script="res://src/core/mainMenu.gd"
 open_help=[]
 script_split_offset=400
 list_split_offset=0
